--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,14 @@ jobs:
       - name: Install Dependencies
         run: |
           haxelib install hxcpp --quiet
-          haxelib install lime 8.2.1 --quiet
-          haxelib install openfl 9.4.0 --quiet
+          haxelib install lime --quiet
+          haxelib install openfl --quiet
           haxelib git flixel https://github.com/HaxeFlixel/flixel --quiet
           haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons --quiet
           haxelib git flixel-text-input https://github.com/Starmapo/flixel-text-input --quiet
           haxelib git haxeui-core https://github.com/haxeui/haxeui-core --quiet
           haxelib git haxeui-flixel https://github.com/haxeui/haxeui-flixel --quiet --skip-dependencies
+          haxelib install hxvlc --quiet --skip-dependencies
         shell: cmd
       - name: Build
         run: |
@@ -43,13 +44,14 @@ jobs:
       - name: Install Dependencies
         run: |
           haxelib install hxcpp --quiet
-          haxelib install lime 8.2.1 --quiet
-          haxelib install openfl 9.4.0 --quiet
+          haxelib install lime --quiet
+          haxelib install openfl --quiet
           haxelib git flixel https://github.com/HaxeFlixel/flixel --quiet
           haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons --quiet
           haxelib git flixel-text-input https://github.com/Starmapo/flixel-text-input --quiet
           haxelib git haxeui-core https://github.com/haxeui/haxeui-core --quiet
           haxelib git haxeui-flixel https://github.com/haxeui/haxeui-flixel --quiet --skip-dependencies
+          haxelib install hxvlc --quiet --skip-dependencies
         shell: cmd
       - name: Build
         run: |
